gccida/g0/duplicate_decls
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1850:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1851:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1859:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1861:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1865:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *trytype_0; // [rsp+38h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:1866:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *trytype; // [rsp+40h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2214:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( newtype->int_cst.rtl[2] ) 
^    ~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2216:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( oldtype->int_cst.rtl[2] ) 
^    ~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:14: error: expected expression
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:31: error: invalid operands to binary expression ('struct tree_block' and 'int')
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
               ~~~~~~~~~~~~~~ ^ ~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:52: error: expected expression
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:44: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/c-decl.c:2431:69: error: invalid operands to binary expression ('struct tree_block' and 'int')
*( ( _OWORD *)&newdecl->block + 10) = *( ( _OWORD *)&olddecl->block + 10); 
                                                     ~~~~~~~~~~~~~~ ^ ~~
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/duplicate_decls/src/obj/c-decl.o] Error 1
